# EU-digital-identity-wallet

./: .gitignore  README.md  cloud-run-service.yaml  docker-compose.yml
.github/workflows/: ci.yml
certs/: root-ca.cnf  root-ca.crt  wildcard.test.cnf  wildcard.test.crt  wildcard.test.key
dns/: Dockerfile  dns.conf
pidp/: Dockerfile
server-1984/app/: app.py
specs/: certificate-authority.md  pid-provider.md  pseudonym.md  trusted-list.md
src/: README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml
src/certificate-authority/app/: app.py
src/certs/: root-ca.crt  wildcard.test.cnf  wildcard.test.crt  wildcard.test.key
src/pid-provider/: Dockerfile  init.sql  requirements.txt
src/pid-provider/app/: app.py  routes.py  utils.py
src/relying-party/: Dockerfile
src/relying-party/app/: app.py  server.js  wallet.js
src/reverse-proxy/: cloud-run-nginx.conf  dns.conf  index.html
src/trusted-list/: .dockerignore  Dockerfile  init.sql  requirements.txt
src/trusted-list/app/: app.py
src/wallet/: README.md  docker-compose.yml
src/wallet-backend/: Dockerfile  pyproject.toml
src/wallet-backend/app/: app.py  db.py  totp.py
src/wallet-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  vite.config.ts
src/wallet-frontend/src/: App.tsx  config.ts  main.jsx
src/wallet/backend/: Dockerfile  pyproject.toml
src/wallet/backend/src/: app.py
src/wallet/frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
src/wallet/frontend/src/: App.tsx
wallet-1984/: nginx.conf
(+31 files in other folders)
