[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{ name = "k688", email = "k688@k688.c" }]
requires-python = ">=3.13"
dependencies = ["quart (>=0.20.0,<0.21.0)"]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
